<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/row">

    <TextView
        android:id="@+id/faha"
        style="@style/row_title"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="end"
        android:text="@string/str_example_hira_page"
        android:textSize="32sp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/h_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/faha"
        android:layout_toRightOf="@+id/faha"
        android:text="@string/str_example_hira_titre"
        style="@style/row_title"
        android:layout_toEndOf="@+id/faha" />

    <TextView
        android:id="@+id/f_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/h_title"
        android:layout_below="@id/h_title"
        android:text="@string/str_example_fihirana_title"
        style="@style/row_special"
        android:layout_alignStart="@id/h_title" />
</RelativeLayout>