<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/linearLayout3"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<TextView
		android:id="@+id/textView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:padding="8dip"
		android:text="@string/about_update_message"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<!-- Input Text -->

	<!-- Input Text -->

	<!-- Spinner Dropdown -->

	<!-- Add Button -->
	<Button
		android:id="@+id/btn_update"
		style="@style/ButtonText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="3dp"
		android:layout_marginRight="3dp"
		android:background="@drawable/btn_blue"
		android:text="@string/about_tohizo"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/btn_cancel"
		app:layout_constraintHorizontal_bias="50"/>

	<Button
		android:id="@+id/btn_cancel"
		style="@style/ButtonText"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="@drawable/btn_blue"
		android:text="@string/about_aoka_ihany"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/btn_update"
		app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>