<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:clickable="false"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_fihirana_row"
                style="@style/home_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="displayFihiranaActivity">

                <!-- ListRow Left sied Thumbnail image -->

                <TextView
                    android:id="@+id/home_fihirana_title"
                    style="@style/home_list_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_fihirana_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/home_fihirana_list_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/home_fihirana_list_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/home_fihirana_title"
                    android:src="@drawable/home_fihirana"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/home_fihirana_title" />


                <!-- Title Of Song -->


                <!-- Artist Name -->

                <TextView
                    android:id="@+id/home_fihirana_desc"
                    style="@style/home_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_fihirana_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/home_fihirana_title"
                    app:layout_constraintTop_toBottomOf="@id/home_fihirana_title" />

                <!-- Rightend Duration -->


                <!-- tsipika -->


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_tadiavo_row"
                style="@style/home_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="displayTadiavoActivity"
                android:padding="5dip">

                <ImageView
                    android:id="@+id/home_tadiavo_list_image"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:contentDescription="@string/home_tadiavo_title"
                    android:src="@drawable/home_tadiavo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/home_tadiavo_title"
                    style="@style/home_list_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tadiavo_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/home_tadiavo_list_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home_tadiavo_desc"
                    style="@style/home_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_tadiavo_title"
                    android:text="@string/home_tadiavo_desc"
                    app:layout_constraintEnd_toEndOf="@id/home_tadiavo_title"
                    app:layout_constraintStart_toStartOf="@id/home_tadiavo_title"
                    app:layout_constraintTop_toBottomOf="@id/home_tadiavo_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_salamo_row"
                style="@style/home_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="displaySalamoActivity"
                android:padding="5dip">

                <!-- ListRow Left sied Thumbnail image -->

                <ImageView
                    android:id="@+id/home_salamo_list_image"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:contentDescription="@string/salamo_activity_title"
                    android:src="@drawable/home_salamo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home_salamo_title"
                    style="@style/home_list_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_salamo_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/home_salamo_list_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Artist Name -->

                <TextView
                    android:id="@+id/home_salamo_desc"
                    style="@style/home_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_salamo_desc"
                    app:layout_constraintEnd_toEndOf="@id/home_salamo_title"
                    app:layout_constraintStart_toStartOf="@id/home_salamo_title"
                    app:layout_constraintTop_toBottomOf="@id/home_salamo_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_sokajy_row"
                style="@style/home_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="displaySokajyActivity"
                android:padding="5dip">

                <!-- ListRow Left sied Thumbnail image -->


                <ImageView
                    android:id="@+id/home_sokajy_list_image"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:contentDescription="@string/home_sokajy_title"
                    android:src="@drawable/home_sokajy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Title Of Song -->

                <TextView
                    android:id="@+id/home_sokajy_title"
                    style="@style/home_list_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_sokajy_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/home_sokajy_list_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Artist Name -->

                <TextView
                    android:id="@+id/home_sokajy_desc"
                    style="@style/home_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_sokajy_title"
                    android:text="@string/home_sokajy_desc"
                    app:layout_constraintEnd_toEndOf="@id/home_sokajy_title"
                    app:layout_constraintStart_toStartOf="@id/home_sokajy_title"
                    app:layout_constraintTop_toBottomOf="@id/home_sokajy_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_favorite_row"
                style="@style/home_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="displayFavoriteActivity"
                android:padding="5dip">

                <!-- ListRow Left sied Thumbnail image -->


                <ImageView
                    android:id="@+id/home_favorite_list_image"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:contentDescription="@string/title_favorite_list"
                    android:src="@drawable/home_favorite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home_favorite_title"
                    style="@style/home_list_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_favorite_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/home_favorite_list_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Artist Name -->

                <TextView
                    android:id="@+id/home_favorite_desc"
                    style="@style/home_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_favorite_title"
                    android:text="@string/home_favorite_desc"
                    app:layout_constraintEnd_toEndOf="@id/home_favorite_title"
                    app:layout_constraintStart_toStartOf="@id/home_favorite_title"
                    app:layout_constraintTop_toBottomOf="@id/home_favorite_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_info_row"
                style="@style/home_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dip">


                <ImageView
                    android:id="@+id/home_info_list_image"
                    android:layout_width="50dip"
                    android:layout_height="50dip"
                    android:contentDescription="@string/title_activity_about"
                    android:src="@drawable/home_info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home_info_list_title"
                    style="@style/home_list_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_info_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/home_info_list_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtInfoDesc"
                    style="@style/home_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_info_desc"
                    app:layout_constraintEnd_toEndOf="@id/home_info_list_title"
                    app:layout_constraintStart_toStartOf="@id/home_info_list_title"
                    app:layout_constraintTop_toBottomOf="@id/home_info_list_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


    <org.katolika.fihirana.lib.FooterLayout
        android:id="@+id/footerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>